name:                five-hundred
version:             0.1.0.0
synopsis:            Server for experimentation with Websockets in Elm
description:         Please see README.md
homepage:            https://github.com/githubuser/five-hundred#readme
license:             MIT
license-file:        LICENSE
author:              Kieran Trezona-le Comte
maintainer:          trezona.lecomte@gmail.com
copyright:           2016 Kieran Trezona-le Comte
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
  build-depends:       base >= 4.7 && < 5
                     , text
                     , websockets
  default-language:    Haskell2010

executable five-hundred-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , text
                     , websockets
                     , five-hundred
  default-language:    Haskell2010

test-suite five-hundred-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , text
                     , websockets
                     , five-hundred
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/five-hundred
